Fixed up clipped lowercase letters on masonry

--- a/style.css
+++ b/style.css
@@ -22,16 +22,12 @@ header .brand img {
 }
 
 .multiple-posts article h1 {
-    overflow: hidden;
     font-size: 17.5px;
     line-height: 20px;
 }
 
-.multiple-posts article p {
-    overflow: hidden;
-}
-
 .multiple-posts article {
+    overflow: hidden;
     margin-bottom: 10px;
 }
 
